--- a/AddParameterForFuncton/package.json
+++ b/AddParameterForFuncton/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.3",
     "@babel/generator": "^7.23.4",
     "@babel/parser": "^7.23.4",
-    "@babel/traverse": "^7.23.4"
+    "@babel/traverse": "^7.23.4",
+    "path": "^0.12.7"
   }
 }
