--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,10 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/**",
+                "!**/node_modules/**"
+            ],
             "program": "${file}"
         }
     ]
